# Job-Search-Automation

./: .env.example  .gitignore  AI_ENGINE_SPEC.md  CICD_SPEC.md  CLAUDE.md  DASHBOARD_SPEC.md  DATABASE_SPEC.md  FEATURES_IMPLEMENTED.md  GITHUB_SETUP.md  PERBAIKAN_ERROR.md  README.md  SCRAPER_SPEC.md  SETUP_COMPLETE.md  TELEGRAM_CHANNEL_SETUP.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: job_bot.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_apply_fields.py  003_add_job_tracking_fields.py  004_add_application_tracking.py
app/: config.py  dependencies.py  main.py
app/ai_engine/: __init__.py  ai_constants.py  anthropic_provider.py  cover_letter_engine.py  (+10 more)
dashboard/: app.py
docker/: Dockerfile  Dockerfile.dashboard  nginx.conf
scripts/: backup_db.py  check_expiring_jobs.py  cleanup_duplicate_urls.py  export_jobs.py  generate_report.py  get_channel_id.py  get_telegram_chat_id.py  notify_error.py  research_company.py  reset_database.py  run_ai_engine.py  run_job_finder.py  run_job_finder_optimized.py  run_migrations.py  run_scraper.py  salary_insights.py  scrape_full_description.py  send_daily_summary.py  smart_scheduler.py  stamp_database.py  test_all_platforms.py  test_all_systems.py  test_channel.py  test_dashboard_connection.py  test_db_save.py  test_email_extraction.py  test_extractor.py  test_job_finder_quick.py  test_job_message.py  test_login.py  test_login_auto.py  test_scrape_one_job.py  test_simple.py  test_telegram.py  test_telegram_format.py
tests/: conftest.py
(+71 files in other folders)
